[package]
name = "p2p-pbft"
version = "0.1.0"
edition = "2021"
description = "P2P Network with PBFT Consensus"
authors = ["Amit Kumar"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
parking_lot = "0.12"

# Blockchain additions
rocksdb = "0.22"
warp = "0.3"
tempfile = "3.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[bin]]
name = "p2p-pbft"
path = "src/main.rs"

[[bin]]
name = "wallet"
path = "src/bin/wallet.rs"
